--- a/appview/pages/templates/repo/issues/fragments/issueCommentActions.html
+++ b/appview/pages/templates/repo/issues/fragments/issueCommentActions.html
@@ -11,7 +11,7 @@
 {{ define "edit" }}
   <a
     class="text-gray-500 dark:text-gray-400 flex gap-1 items-center group"
-    hx-get="/{{ .RepoInfo.FullName }}/issues/{{ .Issue.Id }}/comment/{{ .Comment.Id }}/edit"
+    hx-get="/{{ .RepoInfo.FullName }}/issues/{{ .Issue.IssueId }}/comment/{{ .Comment.Id }}/edit"
     hx-swap="outerHTML"
     hx-target="#comment-body-{{.Comment.Id}}">
     {{ i "pencil" "size-3" }}
@@ -22,7 +22,7 @@
 {{ define "delete" }}
   <a
     class="text-gray-500 dark:text-gray-400 flex gap-1 items-center group"
-    hx-delete="/{{ .RepoInfo.FullName }}/issues/{{ .Issue.Id }}/comment/{{ .Comment.Id }}/"
+    hx-delete="/{{ .RepoInfo.FullName }}/issues/{{ .Issue.IssueId }}/comment/{{ .Comment.Id }}/"
     hx-confirm="Are you sure you want to delete your comment?"
     hx-swap="outerHTML"
     hx-target="#comment-body-{{.Comment.Id}}"
