--- a/appview/pages/templates/repo/issues/fragments/issueCommentHeader.html
+++ b/appview/pages/templates/repo/issues/fragments/issueCommentHeader.html
@@ -5,8 +5,8 @@
     {{ template "timestamp" . }}
     {{ $isCommentOwner := and .LoggedInUser (eq .LoggedInUser.Did .Comment.Did) }}
     {{ if and $isCommentOwner (not .Comment.Deleted) }}
-      {{ template "edit" . }}
-      {{ template "delete" . }}
+      {{ template "editIssueComment" . }}
+      {{ template "deleteIssueComment" . }}
     {{ end }}
   </div>
 {{ end }}
@@ -32,20 +32,20 @@
   </a>
 {{ end }}
 
-{{ define "edit" }}
+{{ define "editIssueComment" }}
   <a
     class="text-gray-500 dark:text-gray-400 flex gap-1 items-center group"
-    hx-get="/{{ .RepoInfo.FullName }}/issues/{{ .Issue.Id }}/comment/{{ .Comment.Id }}/edit"
+    hx-get="/{{ .RepoInfo.FullName }}/issues/{{ .Issue.IssueId }}/comment/{{ .Comment.Id }}/edit"
     hx-swap="outerHTML"
     hx-target="#comment-body-{{.Comment.Id}}">
     {{ i "pencil" "size-3" }}
   </a>
 {{ end }}
 
-{{ define "delete" }}
+{{ define "deleteIssueComment" }}
   <a
     class="text-gray-500 dark:text-gray-400 flex gap-1 items-center group"
-    hx-delete="/{{ .RepoInfo.FullName }}/issues/{{ .Issue.Id }}/comment/{{ .Comment.Id }}/"
+    hx-delete="/{{ .RepoInfo.FullName }}/issues/{{ .Issue.IssueId }}/comment/{{ .Comment.Id }}/"
     hx-confirm="Are you sure you want to delete your comment?"
     hx-swap="outerHTML"
     hx-target="#comment-body-{{.Comment.Id}}"
