--- a/appview/pages/templates/repo/issues/fragments/replyIssueCommentPlaceholder.html
+++ b/appview/pages/templates/repo/issues/fragments/replyIssueCommentPlaceholder.html
@@ -1,10 +1,12 @@
 {{ define "repo/issues/fragments/replyIssueCommentPlaceholder" }}
   <div class="p-2 border-t flex gap-2 items-center border-gray-300 dark:border-gray-700">
-    <img
-        src="{{ tinyAvatar .LoggedInUser.Did }}"
-        alt=""
-        class="rounded-full h-6 w-6 mr-1 border border-gray-300 dark:border-gray-700"
-    />
+    {{ if .LoggedInUser }}
+      <img
+          src="{{ tinyAvatar .LoggedInUser.Did }}"
+          alt=""
+          class="rounded-full h-6 w-6 mr-1 border border-gray-300 dark:border-gray-700"
+      />
+    {{ end }}
     <input
       class="w-full py-2 border-none focus:outline-none"
       placeholder="Leave a reply..."
