--- a/input.css
+++ b/input.css
@@ -90,7 +90,7 @@
         }
 
         label {
-            @apply block mb-2 text-gray-900 text-sm font-bold py-2 uppercase dark:text-gray-100;
+            @apply block text-gray-900 text-sm font-bold py-2 uppercase dark:text-gray-100;
         }
         input {
             @apply border border-gray-400 block rounded bg-gray-50 focus:ring-black p-3 dark:bg-gray-800 dark:border-gray-600 dark:text-white dark:focus:ring-gray-400;
