--- a/appview/pages/templates/repo/index.html
+++ b/appview/pages/templates/repo/index.html
@@ -44,16 +44,12 @@
         ></div>
         {{ end }}
       </summary>
-      <div class="px-4 py-2 bg-gray-50 dark:bg-gray-700 border-b border-gray-200 dark:border-gray-600 flex items-center gap-4 flex-wrap">
+      <div class="px-4 py-2 border-b border-gray-200 dark:border-gray-600 flex items-center gap-4 flex-wrap">
         {{ range $value := .Languages }}
         <div
           class="flex flex-grow items-center gap-2 text-xs align-items-center justify-center"
         >
-          <div
-            class="rounded-full h-2 w-2"
-            style="background: radial-gradient(circle at 35% 35%, color-mix(in srgb, {{ $value.Color }} 70%, white), {{ $value.Color }} 30%, color-mix(in srgb, {{ $value.Color }} 85%, black));"
-          >
-          </div>
+          {{ template "repo/fragments/languageBall" $value.Name }}
           <div>{{ or $value.Name "Other" }}
             <span class="text-gray-500 dark:text-gray-400">
               {{ if lt $value.Percentage 0.05 }}
