--- a/appview/pages/templates/layouts/base.html
+++ b/appview/pages/templates/layouts/base.html
@@ -53,7 +53,7 @@
            {{ if .LoggedInUser }}
             <div id="upgrade-banner"
                  class="z-50 fixed bottom-0 left-0 right-0 w-full flex justify-center bg-yellow-100 text-yellow-800 dark:bg-yellow-900 dark:text-yellow-200 border border-yellow-200 dark:border-yellow-800 rounded-b drop-shadow-sm"
-                 hx-get="/knots/upgradeBanner"
+                 hx-get="/banner"
                  hx-trigger="load"
                  hx-swap="innerHTML">
             </div>
