--- a/appview/pages/templates/layouts/base.html
+++ b/appview/pages/templates/layouts/base.html
@@ -24,6 +24,14 @@
         <body class="min-h-screen grid grid-cols-1 grid-rows-[min-content_auto_min-content] md:grid-cols-12 gap-4 bg-slate-100 dark:bg-gray-900 dark:text-white transition-colors duration-200">
           {{ block "topbarLayout" . }}
             <header class="px-1 col-span-1 md:col-start-3 md:col-span-8" style="z-index: 20;">
+
+               {{ if .LoggedInUser }}
+                <div id="upgrade-banner"
+                     hx-get="/upgradeBanner"
+                     hx-trigger="load"
+                     hx-swap="innerHTML">
+                </div>
+              {{ end }}
               {{ template "layouts/fragments/topbar" . }}
             </header>
           {{ end }}
@@ -48,15 +56,6 @@
             <footer class="px-1 col-span-1 md:col-start-3 md:col-span-8 mt-12">
               {{ template "layouts/fragments/footer" . }}
             </footer>
-          {{ end }}
-
-           {{ if .LoggedInUser }}
-            <div id="upgrade-banner"
-                 class="z-50 fixed bottom-0 left-0 right-0 w-full flex justify-center bg-yellow-100 text-yellow-800 dark:bg-yellow-900 dark:text-yellow-200 border border-yellow-200 dark:border-yellow-800 rounded-b drop-shadow-sm"
-                 hx-get="/banner"
-                 hx-trigger="load"
-                 hx-swap="innerHTML">
-            </div>
           {{ end }}
         </body>
     </html>
