--- a/appview/pages/templates/layouts/fragments/topbar.html
+++ b/appview/pages/templates/layouts/fragments/topbar.html
@@ -2,9 +2,7 @@
     <nav class="space-x-4 px-6 py-2 rounded bg-white dark:bg-gray-800 dark:text-white drop-shadow-sm">
         <div class="flex justify-between p-0 items-center">
             <div id="left-items">
-                <a href="/" hx-boost="true" class="flex gap-2 font-bold italic">
-                  tangled<sub>alpha</sub>
-                </a>
+              <a href="/" hx-boost="true" class="text-lg">{{ template "fragments/logotype" }}</a>
             </div>
 
             <div id="right-items" class="flex items-center gap-2">
