--- a/appview/pages/templates/user/login.html
+++ b/appview/pages/templates/user/login.html
@@ -13,8 +13,8 @@
         </head>
         <body class="flex items-center justify-center min-h-screen">
             <main class="max-w-md px-6 -mt-4">
-                <h1 class="text-center text-2xl font-semibold italic dark:text-white" >
-                    tangled
+                <h1 class="flex place-content-center text-2xl font-semibold italic dark:text-white" >
+                  {{ template "fragments/logotype" }}
                 </h1>
                 <h2 class="text-center text-xl italic dark:text-white">
                     tightly-knit social coding.
