--- a/appview/pages/templates/user/signup.html
+++ b/appview/pages/templates/user/signup.html
@@ -13,7 +13,9 @@
         </head>
         <body class="flex items-center justify-center min-h-screen">
             <main class="max-w-md px-6 -mt-4">
-                <h1 class="text-center text-2xl font-semibold italic dark:text-white" >tangled</h1>
+                <h1 class="flex place-content-center text-2xl font-semibold italic dark:text-white" >
+                  {{ template "fragments/logotype" }}
+                </h1>
                 <h2 class="text-center text-xl italic dark:text-white">tightly-knit social coding.</h2>
                 <form
                     class="mt-4 max-w-sm mx-auto"
