appview: fix headers in knot and spindle dashboards
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/spindles/index.html
+++ b/appview/pages/templates/spindles/index.html
@@ -1,15 +1,11 @@
 {{ define "title" }}spindles{{ end }}
 
 {{ define "content" }}
-<div class="px-6 py-4 flex items-end justify-start gap-4 align-bottom">
+<div class="px-6 py-4 flex items-center justify-between gap-4 align-bottom">
     <h1 class="text-xl font-bold dark:text-white">Spindles</h1>
-
-
-    <span class="flex items-center gap-1 text-sm">
+    <span class="flex items-center gap-1">
         {{ i "book" "w-3 h-3" }}
-        <a href="https://tangled.sh/@tangled.sh/core/blob/master/docs/spindle/hosting.md">
-            docs
-        </a>
+        <a href="https://tangled.sh/@tangled.sh/core/blob/master/docs/spindle/hosting.md">docs</a>
     </span>
 </div>
 
