--- a/appview/pages/templates/knots/index.html
+++ b/appview/pages/templates/knots/index.html
@@ -1,14 +1,11 @@
 {{ define "title" }}knots{{ end }}
 
 {{ define "content" }}
-<div class="px-6 py-4 flex items-end justify-start gap-4 align-bottom">
+<div class="px-6 py-4 flex items-center justify-between gap-4 align-bottom">
   <h1 class="text-xl font-bold dark:text-white">Knots</h1>
-
-  <span class="flex items-center gap-1 text-sm">
+  <span class="flex items-center gap-1">
       {{ i "book" "w-3 h-3" }}
-      <a href="https://tangled.sh/@tangled.sh/core/blob/master/docs/knot-hosting.md">
-          docs
-      </a>
+      <a href="https://tangled.sh/@tangled.sh/core/blob/master/docs/knot-hosting.md">docs</a>
   </span>
 </div>
 
