appview: increase base layout width on md size screens
- sm: single column grid
- md: 10 column grid, with 1-8-1 layout
- lg: 12 column grid, with 2-8-2 layout

Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/timeline/fragments/hero.html
+++ b/appview/pages/templates/timeline/fragments/hero.html
@@ -23,7 +23,7 @@
 
         <figure class="w-full hidden md:block md:w-auto">
             <a href="https://tangled.sh/@tangled.sh/core" class="block">
-                <img src="https://assets.tangled.network/hero-repo.png" alt="Screenshot of the Tangled monorepo." class="max-w-md mx-auto md:max-w-none w-full md:w-[30vw] h-auto shadow-sm rounded hover:shadow-md transition-shadow" />
+                <img src="https://assets.tangled.network/hero-repo.png" alt="Screenshot of the Tangled monorepo." class="max-w-md mx-auto md:max-w-none w-full md:w-[30vw] h-auto shadow-sm rounded" />
             </a>
             <figcaption class="text-sm text-gray-600 dark:text-gray-400 mt-2 text-center">
                 Monorepo for Tangled, built in the open with the community.
