--- a/appview/pages/templates/timeline/home.html
+++ b/appview/pages/templates/timeline/home.html
@@ -27,7 +27,7 @@
 {{ define "feature" }}
     {{ $info := index . 0 }}
     {{ $bullets := index . 1 }}
-    <div class="flex flex-col items-top gap-6 md:flex-row md:gap-12">
+    <div class="flex flex-col items-center gap-6 md:flex-row md:items-top">
         <div class="flex-1">
             <h2 class="text-2xl font-bold text-black dark:text-white mb-6">{{ $info.title }}</h2>
             <ul class="leading-normal">
@@ -38,14 +38,14 @@
         </div>
         <div class="flex-shrink-0 w-96 md:w-1/3">
           <a href="{{ $info.image }}">
-            <img src="{{ $info.image }}" alt="{{ $info.alt }}" class="w-full h-auto rounded" />
+            <img src="{{ $info.image }}" alt="{{ $info.alt }}" class="w-full h-auto rounded shadow-sm" />
           </a>
         </div>
     </div>
 {{ end }}
 
 {{ define "features" }}
-  <div class="prose dark:text-gray-200 space-y-12 px-6 py-4">
+  <div class="prose dark:text-gray-200 space-y-12 px-6 py-4 bg-white dark:bg-gray-800 rounded drop-shadow-sm">
     {{ template "feature" (list
         (dict
             "title" "lightweight git repo hosting"
