--- a/appview/pages/templates/layouts/profilebase.html
+++ b/appview/pages/templates/layouts/profilebase.html
@@ -9,14 +9,19 @@
 
 {{ define "content" }}
   {{ template "profileTabs" . }}
-  <section class="bg-white dark:bg-gray-800 p-6 rounded w-full dark:text-white drop-shadow-sm">
+  <section class="bg-white dark:bg-gray-800 px-2 py-6 md:p-6 rounded w-full dark:text-white drop-shadow-sm">
     <div class="grid grid-cols-1 md:grid-cols-11 gap-4">
-      <div class="md:col-span-3 order-1 md:order-1">
+      {{ $style := "hidden md:block md:col-span-3" }}
+      {{ if eq $.Active "overview" }}
+        {{ $style = "md:col-span-3" }}
+      {{ end }}
+      <div class="{{ $style }} order-1 order-1">
         <div class="flex flex-col gap-4">
           {{ template "user/fragments/profileCard" .Card }}
           {{ block "punchcard" .Card.Punchcard }} {{ end }}
         </div>
       </div>
+
       {{ block "profileContent" . }} {{ end }}
     </div>
   </section>
