appview/repo: add handlers to add/del label definitions
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/repo/settings/pipelines.html
+++ b/appview/pages/templates/repo/settings/pipelines.html
@@ -109,7 +109,7 @@
   hx-swap="none"
   class="flex flex-col gap-2"
 >
-  <p class="uppercase p-0">ADD SECRET</p>
+  <p class="uppercase p-0 font-bold">ADD SECRET</p>
   <p class="text-sm text-gray-500 dark:text-gray-400">Secrets are available as environment variables in the workflow.</p>
   <input
     type="text"
