--- a/appview/pages/templates/repo/index.html
+++ b/appview/pages/templates/repo/index.html
@@ -49,7 +49,7 @@
         <div
           class="flex flex-grow items-center gap-2 text-xs align-items-center justify-center"
         >
-          {{ template "repo/fragments/languageBall" $value.Name }}
+          {{ template "repo/fragments/colorBall" (dict "color" (langColor $value.Name)) }}
           <div>{{ or $value.Name "Other" }}
             <span class="text-gray-500 dark:text-gray-400">
               {{ if lt $value.Percentage 0.05 }}
