--- a/appview/pages/templates/user/overview.html
+++ b/appview/pages/templates/user/overview.html
@@ -73,7 +73,7 @@
             {{ with .Repo.RepoStats }}
               {{ with .Language }}
                 <div class="flex gap-2 items-center text-xs font-mono text-gray-400 ">
-                  {{ template "repo/fragments/languageBall" . }}
+                  {{ template "repo/fragments/colorBall" (dict "color" (langColor .)) }}
                   <span>{{ . }}</span>
                 </div>
               {{end }}
