--- a/appview/pages/templates/strings/string.html
+++ b/appview/pages/templates/strings/string.html
@@ -23,7 +23,7 @@
              hx-boost="true"
              href="/strings/{{ .String.Did }}/{{ .String.Rkey }}/edit">
             {{ i "pencil" "size-4" }}
-            <span class="hidden md:inline">edit</span> 
+            <span class="hidden md:inline">edit</span>
             {{ i "loader-circle" "w-4 h-4 animate-spin hidden group-[.htmx-request]:inline" }}
           </a>
           <button
@@ -34,7 +34,7 @@
             hx-confirm="Are you sure you want to delete the string `{{ .String.Filename }}`?"
           >
             {{ i "trash-2" "size-4" }}
-            <span class="hidden md:inline">delete</span> 
+            <span class="hidden md:inline">delete</span>
             {{ i "loader-circle" "w-4 h-4 animate-spin hidden group-[.htmx-request]:inline" }}
           </button>
         </div>
@@ -80,5 +80,6 @@
       <div id="blob-contents" class="whitespace-pre peer-target:bg-yellow-200 dark:peer-target:bg-yellow-900">{{ .String.Contents | escapeHtml }}</div>
       {{ end }}
     </div>
+    {{ template "fragments/multiline-select" }}
   </section>
 {{ end }}
