--- a/appview/pages/templates/repo/settings/general.html
+++ b/appview/pages/templates/repo/settings/general.html
@@ -57,7 +57,7 @@
         <button
           class="btn flex items-center gap-2"
           popovertarget="add-labeldef-modal"
-          {{ if not (or .RepoInfo.Roles.IsOwner .RepoInfo.Roles.IsCollaborator) }}disabled{{ end }}
+          {{ if not .RepoInfo.Roles.IsOwner }}disabled{{ end }}
           popovertargetaction="toggle">
           {{ i "plus" "size-4" }}
           add label
@@ -65,7 +65,7 @@
         <div
           id="add-labeldef-modal"
           popover
-          class="bg-white w-full sm:w-96 dark:bg-gray-800 p-6 rounded border border-gray-200 dark:border-gray-700 drop-shadow dark:text-white backdrop:bg-gray-400/50 dark:backdrop:bg-gray-800/50">
+          class="bg-white w-full sm:w-[30rem] dark:bg-gray-800 p-6 rounded border border-gray-200 dark:border-gray-700 drop-shadow dark:text-white backdrop:bg-gray-400/50 dark:backdrop:bg-gray-800/50">
           {{ template "repo/settings/fragments/addLabelDefModal" . }}
         </div>
       </div>
