--- a/appview/pages/templates/layouts/base.html
+++ b/appview/pages/templates/layouts/base.html
@@ -21,9 +21,10 @@
             <title>{{ block "title" . }}{{ end }} · tangled</title>
             {{ block "extrameta" . }}{{ end }}
         </head>
-        <body class="min-h-screen grid grid-cols-1 grid-rows-[min-content_auto_min-content] md:grid-cols-10 lg:grid-cols-12 gap-4 bg-slate-100 dark:bg-gray-900 dark:text-white transition-colors duration-200">
+        <body class="min-h-screen grid grid-cols-1 grid-rows-[min-content_auto_min-content] gap-4 bg-slate-100 dark:bg-gray-900 dark:text-white transition-colors duration-200"
+          style="grid-template-columns: minmax(1rem, 1fr) minmax(auto, 1024px) minmax(1rem, 1fr);">
           {{ block "topbarLayout" . }}
-            <header class="px-1 col-span-1 md:col-start-2 md:col-span-8 lg:col-start-3" style="z-index: 20;">
+            <header class="px-1 col-span-full md:col-span-1 md:col-start-2" style="z-index: 20;">
 
                {{ if .LoggedInUser }}
                 <div id="upgrade-banner"
@@ -37,7 +38,7 @@
           {{ end }}
 
           {{ block "mainLayout" . }}
-            <div class="px-1 col-span-1 md:col-start-2 md:col-span-8 lg:col-start-3 flex flex-col gap-4">
+            <div class="px-1 col-span-full  md:col-span-1 md:col-start-2 flex flex-col gap-4">
               {{ block "contentLayout" . }}
                 <main class="col-span-1 md:col-span-8">
                   {{ block "content" . }}{{ end }}
@@ -53,7 +54,7 @@
           {{ end }}
 
           {{ block "footerLayout" . }}
-            <footer class="px-1 col-span-1 md:col-start-2 md:col-span-8 lg:col-start-3 mt-12">
+            <footer class="px-1 col-span-full md:col-span-1 md:col-start-2 mt-12">
               {{ template "layouts/fragments/footer" . }}
             </footer>
           {{ end }}
